--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -30,17 +31,18 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "react-native-gesture-handler": "~1.10.2"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-sqlite-storage": "^5.0.1",
     "jest-expo": "~43.0.0",
     "typescript": "~4.3.5"
   },
